--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
         <div class="container" id="container">
           <div class="block-heading">
             <h2>Shopping Cart</h2>
-            <p>This is an example of Checkout Pro integration of Mercado Pago</p> 
+            <p>Library Test</p> 
           </div>
           <div class="content">
             <div class="row">
@@ -66,14 +66,14 @@
         <div class="container_payment">
           <div class="block-heading">
             <h2>Checkout Payment</h2>
-            <p>This is an example of a Mercado Pago integration</p>
+            <p>Library Test</p>
           </div>
           <div class="form-payment">
             <div class="products">
               <h2 class="title">Summary</h3>
               <div class="item">
                 <span class="price" id="summary-price"></span>
-                <p class="item-name">Book x <span id="summary-quantity"></span></p>
+                <p class="item-name">Book 1 <span id="summary-quantity"></span></p>
               </div>
               <div class="total">Total<span class="price" id="summary-total"></span></div>
             </div>
