--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Template Code - Checkout Pro</title>  
+    <title>Library test</title>  
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -13,11 +13,11 @@
   </head>
   <body>
     <main>
-      <!-- Shopping Cart -->
+      <!-- library	 Cart -->
       <section class="shopping-cart dark">
         <div class="container" id="container">
           <div class="block-heading">
-            <h2>Shopping Cart</h2>
+            <h2>Library Cart</h2>
             <p>Library Test</p> 
           </div>
           <div class="content">
@@ -34,9 +34,9 @@
                           <div class="col-md-4 product-detail">
                             <h5>Product</h5>
                             <div class="product-info">
-                              <p><b>Description: </b><span id="product-description">Some book</span><br>
-                              <b>Author: </b>Dale Carnegie<br>
-                              <b>Number of pages: </b>336<br>
+                              <p><b>Description: </b><span id="product-description">Golang book</span><br>
+                              <b>Author: </b>Mina Andrawos<br>
+                              <b>Number of pages: </b>70<br>
                               <b>Price:</b> $ <span id="unit-price">10</span></p>
                             </div>
                           </div>
@@ -87,7 +87,7 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 10 10" class="chevron-left">
                     <path fill="#009EE3" fill-rule="nonzero"id="chevron_left" d="M7.05 1.4L6.2.552 1.756 4.997l4.449 4.448.849-.848-3.6-3.6z"></path>
                   </svg>
-                  Go back to Shopping Cart
+                  Go back to Library Cart
                 </a>
               </div>
             </div>
@@ -96,13 +96,7 @@
       </section>
       <!-- footer -->
     </main>
-    <footer>
-      <div class="footer_logo"><img id="horizontal_logo" src="img/horizontal_logo.png"></div>
-      <div class="footer_text">
-        <p>Developers Site:</p>
-        <p><a href="https://developers.mercadopago.com">https://developers.mercadopago.com</p>
-      </div>
-		</footer>
+
   </body>
   
 
