--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://secure.mlstatic.com/sdk/javascript/v1/mercadopago.js"></script>
     <script type="text/javascript" src="js/index.js" defer></script>
+	<script src="https://www.mercadopago.com/v2/security.js" view="home"></script>
+	<script src="https://sdk.mercadopago.com/js/v2"></script>
   </head>
   <body>
     <main>
@@ -33,10 +35,11 @@
                           <div class="col-md-4 product-detail">
                             <h5>Product</h5>
                             <div class="product-info">
-                              <p><b>Description: </b><span id="product-description">Some book</span><br>
+							 <p><b>Description: </b><span id="product-title">Celular 1</span><br>
+                              <p><b>Description: </b><span id="product-description">Dispositivo móvil de Tienda e-commerce</span><br>
                               <b>Author: </b>Dale Carnegie<br>
                               <b>Number of pages: </b>336<br>
-                              <b>Price:</b> $ <span id="unit-price">10</span></p>
+                              <b>Price:</b> $ <span id="unit-price">1000</span></p>
                             </div>
                           </div>
                           <div class="col-md-3 product-detail">
@@ -53,7 +56,7 @@
                 <div class="summary">
                   <h3>Cart</h3>
                   <div class="summary-item"><span class="text">Subtotal</span><span class="price" id="cart-total"></span></div>
-                  <button class="btn btn-primary btn-lg btn-block" id="checkout-btn">Checkout</button>
+                  <button class="btn btn-primary btn-lg btn-block" id="checkout-btn">Pagar la compra</button>
                 </div>
               </div>
             </div>
@@ -79,7 +82,9 @@
             <div class="payment-details">
               <div class="form-group col-sm-12">
                 <br>      
-                <div id="button-checkout">
+				
+                <div class="button-checkout" id="button-checkout">
+				 <a href="$init_point$" id="init_point" class="btn">Pagar</a>
                 </div>                 
                 <br>
                 <a id="go-back">
@@ -95,12 +100,16 @@
       </section>
       <!-- footer -->
     </main>
-    <footer>
-      <div class="footer_logo"><img id="horizontal_logo" src="img/horizontal_logo.png"></div>
-      <div class="footer_text">
-        <p>Developers Site:</p>
-        <p><a href="https://developers.mercadopago.com">https://developers.mercadopago.com</p>
-      </div>
-		</footer>
+
   </body>
+  
+  <style>
+  a.button {
+
+    appearance: button;
+
+    text-decoration: none;
+ 
+}
+ <style>
 </html>
