--- a/client/index.html
+++ b/client/index.html
@@ -84,7 +84,7 @@
                 <br>      
 				
                 <div class="button-checkout" id="button-checkout">
-				 <a href="$init_point$" id="init_point" class="btn">Pagar</a>
+				 <a href="$init_point$" id="init_point" class="btn">Pagar la compra</a>
                 </div>                 
                 <br>
                 <a id="go-back">
